Fix spacing errors in week 3

--- a/c1_aws_cloud_technical_essentials/w3_storages_and_databases_on_aws/3.4_choose_the_right_storage_service.ipynb
+++ b/c1_aws_cloud_technical_essentials/w3_storages_and_databases_on_aws/3.4_choose_the_right_storage_service.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Reading 3.4: Choose the Right Storage Service\n",
-    "Here\u2019s a recap of all the storage services mentioned so far. By the end of this reading, you should be able to better answer the question \u201cWhich storage service should I use?\u201d for some of the more common scenarios."
+    "Here’s a recap of all the storage services mentioned so far. By the end of this reading, you should be able to better answer the question “Which storage service should I use?” for some of the more common scenarios."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "## Amazon EBS\n",
-    "Amazon EBS is meant for data that changes frequently and needs to persist through instance stops, terminations, or hardware failures. Amazon EBS has two different types of volumes: SSD-backed volumes and HDD-backed volumes.SSD-backed volumes have the following characteristics.\n",
+    "Amazon EBS is meant for data that changes frequently and needs to persist through instance stops, terminations, or hardware failures. Amazon EBS has two different types of volumes: SSD-backed volumes and HDD-backed volumes. SSD-backed volumes have the following characteristics.\n",
     "- Performance depends on IOPS (input/output operations per second).\n",
     "- Ideal for transactional workloads such as databases and boot volumes.\n",
     "\n",
@@ -41,9 +41,9 @@
    "metadata": {},
    "source": [
     "## Amazon S3\n",
-    "If your data doesn\u2019t change that often, Amazon S3 might be a more cost-effective and scalable storage solution. S3 is ideal for storing static web content and media, backups and archiving, data for analytics, and can even be used to host entire static websites with custom domain names.Here are a few important features of Amazon S3 to know about when comparing it to other services.\n",
+    "If your data doesn’t change that often, Amazon S3 might be a more cost-effective and scalable storage solution. S3 is ideal for storing static web content and media, backups and archiving, data for analytics, and can even be used to host entire static websites with custom domain names. Here are a few important features of Amazon S3 to know about when comparing it to other services.\n",
     "- It is object storage.\n",
-    "- You pay for what you use (you don\u2019t have to provision storage in advance).\n",
+    "- You pay for what you use (you don’t have to provision storage in advance).\n",
     "- Amazon S3 replicates your objects across multiple Availability Zones in a Region.\n",
     "- Amazon S3 is not storage attached to compute."
    ]
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "## Amazon Elastic File System (Amazon EFS) and Amazon FSx\n",
-    "In this module, you\u2019ve already learned about Amazon S3 and Amazon EBS. You learned that S3 uses a flat namespace and isn\u2019t meant to serve as a standalone file system. You also learned most EBS volumes can only be attached to one EC2 instance at a time. So, if you need file storage on AWS, which service should you use?For file storage that can mount on to multiple EC2 instances, you can use Amazon Elastic File System (Amazon EFS) or Amazon FSx. Use the following table for more information about each of these services.\n",
+    "In this module, you’ve already learned about Amazon S3 and Amazon EBS. You learned that S3 uses a flat namespace and isn’t meant to serve as a standalone file system. You also learned most EBS volumes can only be attached to one EC2 instance at a time. So, if you need file storage on AWS, which service should you use? For file storage that can mount on to multiple EC2 instances, you can use Amazon Elastic File System (Amazon EFS) or Amazon FSx. Use the following table for more information about each of these services.\n",
     "\n",
     "| Service                            | Characteristic                                                                    | More Information                                                                             |\n",
     "|------------------------------------|-----------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------|\n",
@@ -63,7 +63,7 @@
     "\n",
     "Here are a few important features of Amazon EFS and FSx to know about when comparing them to other services.\n",
     "- It is file storage.\n",
-    "- You pay for what you use (you don\u2019t have to provision storage in advance).\n",
+    "- You pay for what you use (you don’t have to provision storage in advance).\n",
     "- Amazon EFS and Amazon FSx can be mounted onto multiple EC2 instances."
    ]
   },
