--- a/c1_aws_cloud_technical_essentials/w3_storages_and_databases_on_aws/3.1_storage_types_on_aws.ipynb
+++ b/c1_aws_cloud_technical_essentials/w3_storages_and_databases_on_aws/3.1_storage_types_on_aws.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## File Storage\n",
-    "You may be familiar with file storage if you\u2019ve interacted with file storage systems like Windows File Explorer or Finder on MacOS. You place your files in a tree-like hierarchy that consists of folders and subfolders. For example, if you have hundreds of cat photos on your laptop, you may want to create a folder called Cat photos, and place those images inside that folder to organize them. Since you know these images will be used in an application, you may want to place the cat photos folder inside another folder called Application files.\n",
+    "You may be familiar with file storage if you’ve interacted with file storage systems like Windows File Explorer or Finder on macOS. You place your files in a tree-like hierarchy that consists of folders and subfolders. For example, if you have hundreds of cat photos on your laptop, you may want to create a folder called Cat photos, and place those images inside that folder to organize them. Since you know these images will be used in an application, you may want to place the cat photos folder inside another folder called Application files.\n",
     "\n",
     "<center>\n",
     "  <img \n",
@@ -26,7 +26,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "\u00a0Each file has metadata such as file name, file size, and the date the file was created. The file also has a path, for example, computer/Application\\_files/Cat\\_photos/cats-03.png. When you need to retrieve a file, your system can use the path to find it in the file hierarchy.\n",
+    " Each file has metadata such as file name, file size, and the date the file was created. The file also has a path, for example, computer/Application\\_files/Cat\\_photos/cats-03.png. When you need to retrieve a file, your system can use the path to find it in the file hierarchy.\n",
     "\n",
     "File storage is ideal when you require centralized access to files that need to be easily shared and managed by multiple host computers. Typically, this storage is mounted onto multiple hosts and requires file locking and integration with existing file system communication protocols. Common use cases for file storage include:\n",
     "- Large content repositories\n",
@@ -39,9 +39,9 @@
    "metadata": {},
    "source": [
     "## Block Storage\n",
-    "While file storage treats files as a singular unit, block storage splits files into fixed-size chunks of data called\u00a0**blocks**\u00a0that have their own addresses. Since each block is addressable, blocks can be retrieved efficiently.\n",
+    "While file storage treats files as a singular unit, block storage splits files into fixed-size chunks of data called **blocks** that have their own addresses. Since each block is addressable, blocks can be retrieved efficiently.\n",
     "\n",
-    "When data is requested, these addresses are used by the storage system to organize the blocks in the correct order to form a complete file to present back to the requestor. Outside of the address, there is no additional metadata associated with each block. So, when you want to change a character in a file, you just change the block, or the piece of the file, that contains the character. This ease of access is why block storage solutions are fast and use less bandwidth.\u00a0\n",
+    "When data is requested, these addresses are used by the storage system to organize the blocks in the correct order to form a complete file to present back to the requestor. Outside of the address, there is no additional metadata associated with each block. So, when you want to change a character in a file, you just change the block, or the piece of the file, that contains the character. This ease of access is why block storage solutions are fast and use less bandwidth. \n",
     "\n",
     "<center>\n",
     "  <img \n",
@@ -77,7 +77,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "\u00a0With object storage, you can store almost any type of data, and there is no limit to the number of objects stored, making it easy to scale. Object storage is generally useful when storing large data sets, unstructured files like media assets, and static assets, such as photos."
+    " With object storage, you can store almost any type of data, and there is no limit to the number of objects stored, making it easy to scale. Object storage is generally useful when storing large data sets, unstructured files like media assets, and static assets, such as photos."
    ]
   },
   {
@@ -85,9 +85,9 @@
    "metadata": {},
    "source": [
     "## Relate Back to Traditional Storage Systems\n",
-    "If you\u2019ve worked with storage on-premises, you may already be familiar with block, file, and object storage. Consider the following technologies and how they relate to systems you may have seen before.\n",
-    "- Block storage in the cloud is analogous to\u00a0**direct-attached storage (DAS) or a storage area network (SAN)**.\n",
-    "- File storage systems are often supported with a\u00a0**network attached storage (NAS)**\u00a0server.\n",
+    "If you’ve worked with storage on-premises, you may already be familiar with block, file, and object storage. Consider the following technologies and how they relate to systems you may have seen before.\n",
+    "- Block storage in the cloud is analogous to **direct-attached storage (DAS) or a storage area network (SAN)**.\n",
+    "- File storage systems are often supported with a **network attached storage (NAS)** server.\n",
     "\n",
     "Adding more storage in a traditional data center environment is a more rigid process, as you need to purchase, install, and configure these storage solutions. With cloud computing, the process is more flexible. You can create, delete, and modify storage solutions all within a matter of minutes.\n",
     "\n"
@@ -98,8 +98,8 @@
    "metadata": {},
    "source": [
     "## Resources\n",
-    "- [*External Site:*\u00a0AWS: What Is Cloud Storage](https://aws.amazon.com/what-is-cloud-storage/)\n",
-    "- [*External Site:*\u00a0AWS: Types of Cloud Storage](https://aws.amazon.com/what-is-cloud-object-storage/#types)"
+    "- [AWS: What Is Cloud Storage](https://aws.amazon.com/what-is-cloud-storage/)\n",
+    "- [AWS: Types of Cloud Storage](https://aws.amazon.com/what-is-cloud-object-storage/#types)"
    ]
   }
  ],
